--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.6",
+    "react-toastify": "^9.0.8",
     "react-visibility-sensor": "^5.1.1",
+    "toastify": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
