--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "daisyui": "^2.33.0",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.13.0",
+    "pp365-projectwebparts": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-fade-in": "^1.1.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.6",
     "react-toastify": "^9.0.8",
     "react-visibility-sensor": "^5.1.1",
+    "swiper": "^8.4.4",
     "toastify": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
